# MLTemplate

./: .gitignore  LICENSE  README.md  mylogger.py  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.github/workflows/: tests.yaml
configs/: default_config.yaml
configs/model_experiments/: model1.yaml
configs/train_experiments/: exp1.yaml  exp2.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/machinelearningtemplate/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20250113_122853-43y5rbot/: run-43y5rbot.wandb
wandb/run-20250113_123027-s0z9q164/: run-s0z9q164.wandb
wandb/run-20250113_123027-s0z9q164/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250113_130045-6clfb0f6/: run-6clfb0f6.wandb
wandb/run-20250113_130045-6clfb0f6/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250113_130110-xinpb46w/: run-xinpb46w.wandb
wandb/run-20250113_130110-xinpb46w/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250113_130147-yosxe2bl/: run-yosxe2bl.wandb
wandb/run-20250113_130147-yosxe2bl/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250113_130248-xfyqwvo2/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250113_162239-9f4hmaf4/: run-9f4hmaf4.wandb
wandb/run-20250113_162314-6lmhomg9/: run-6lmhomg9.wandb
wandb/run-20250113_162414-5hl8yu81/: run-5hl8yu81.wandb
(+55 files in other folders)
