[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "machinelearningtemplate"
version = "0.0.1"
description = "Standardized template for Machine Learning Project"
authors = [
  { name = "Oscar Mandrupsen", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff.lint]
select = ["I"]

[tool.ruff]
line-length = 120

[project.scripts]
train = "machinelearningtemplate.train:train"
evaluate = "machinelearningtemplate.evaluate:evaluate"

[tool.coverage.run]
omit = ["tests/*"]
